--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^8.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
@@ -46,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-bi": "^1.2.15",
+    "@iconify/icons-fa": "^1.2.3"
   }
 }
